--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="username(), creatorname(), fullInfo(), desktopsContant()">
     <header >
-        <a href="index.html" class="logo">Desk-Top!</a>
+        <a href="/" class="logo">Desk-Top!</a>
        <a class="contact" onclick="showDashbord()"> connection to <span style="color: #669999; padding-right: 5px; padding-left: 5px;"  id="ipAdress"></span> <span id="connection?" ></span></a>
     </header>
 
@@ -39,7 +39,7 @@
           <img src="public/sourcedon´texist.jpeg" alt=".jpg" style="width:100px;height:70px;" class="borderpicture" onclick="borderpicture(this)"> 
           <img src="public/sourcedon´texist.jpeg" alt=".jpg" style="width:100px;height:70px;" class="borderpicture" onclick="borderpicture(this)"> <br>
         </div>
-        <h>select all pictures with a bicical</h> <br> <br>
+        <h>select all pictures with a bicycle</h> <br> <br>
         <button onclick="nicepictureRight()">commit</button> <br> <br>
         </div>
     </div>
