.service for systemd and .env, but i don´t knew if systemd works

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a>DeskUt: </a>
             </div>
             <div class="Usr" id="Usrjs">
-                <img class="usrpic" id="" src="/img/WhatsApp_Béla.jpeg" alt="USR">
+                <img class="usrpic" id="" src="/WhatsApp_Béla.jpeg" alt="USR">
                 <a> <span id="creatorName"></span></a>
             </div>
         </div>
