--- a/public/404.html
+++ b/public/404.html
@@ -2,22 +2,33 @@
   <head>
     <title>404</title> 
     <style> 
-    .404box {
+    .erorbox {
       height: 500px; 
-      width: 700%; 
+      width: 100%; 
       border-radius: 20px;
+      background-color: #669999;
     }
 
-    .404box img {
-      height: auto;
+    .erorbox1 {
+      overflow: hidden;
+      height: 400px;
       width: auto;
+      padding: 50px;
+    }
+
+    .erorbox1 img {
+      border-radius: 40px;
+      height: 100%;
+      width: 100%;
     }
     </style>
 
   </head> 
   <body>
-    <div class="404box">
-      <img src="/404.png" alt="Tuxi">
+    <div class="erorbox">
+      <div class="erorbox1">
+        <img src="/img/404.png" alt="Tuxi">
+      </div>
     </div> 
     <script>
     </script>
